--- a/challenge_1.ipynb
+++ b/challenge_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,31 +37,29 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 5530 entries, 0 to 5529\n",
-      "Data columns (total 20 columns):\n",
-      " #   Column                         Non-Null Count  Dtype          \n",
-      "---  ------                         --------------  -----          \n",
-      " 0   ID                             5530 non-null   int64          \n",
-      " 1   Status                         5530 non-null   object         \n",
-      " 2   Fine to pay                    5530 non-null   int64          \n",
-      " 3   Already paid                   5530 non-null   int64          \n",
-      " 4   Extra Charges                  5530 non-null   int64          \n",
-      " 5   Cancellation Date              1475 non-null   datetime64[ns] \n",
-      " 6   Cancellation Reason            1613 non-null   object         \n",
-      " 7   Payment Date                   3431 non-null   datetime64[ns] \n",
-      " 8   Parking duration               5530 non-null   int64          \n",
-      " 9   Day of Violation               5530 non-null   datetime64[ns] \n",
-      " 10  First Letter                   4820 non-null   datetime64[ns] \n",
-      " 11  Reminder Sent                  1224 non-null   datetime64[ns] \n",
-      " 12  First Warning                  514 non-null    datetime64[ns] \n",
-      " 13  Lot                            5530 non-null   object         \n",
-      " 14  Total Pay                      5530 non-null   int64          \n",
-      " 15  Allowed duration               5530 non-null   int64          \n",
-      " 16  Exceeded duration              5530 non-null   int64          \n",
-      " 17  License plate city code        5529 non-null   object         \n",
-      " 18  first_ticket_period            4820 non-null   timedelta64[ns]\n",
-      " 19  pay_after_first_ticket_period  3207 non-null   timedelta64[ns]\n",
-      "dtypes: datetime64[ns](6), int64(8), object(4), timedelta64[ns](2)\n",
-      "memory usage: 864.2+ KB\n"
+      "Data columns (total 18 columns):\n",
+      " #   Column                   Non-Null Count  Dtype \n",
+      "---  ------                   --------------  ----- \n",
+      " 0   ID                       5530 non-null   int64 \n",
+      " 1   Status                   5530 non-null   object\n",
+      " 2   Fine to pay              5530 non-null   int64 \n",
+      " 3   Already paid             5530 non-null   int64 \n",
+      " 4   Extra Charges            5530 non-null   int64 \n",
+      " 5   Cancellation Date        1475 non-null   object\n",
+      " 6   Cancellation Reason      1613 non-null   object\n",
+      " 7   Payment Date             3431 non-null   object\n",
+      " 8   Parking duration         5530 non-null   int64 \n",
+      " 9   Day of Violation         5530 non-null   object\n",
+      " 10  First Letter             4820 non-null   object\n",
+      " 11  Reminder Sent            1224 non-null   object\n",
+      " 12  First Warning            514 non-null    object\n",
+      " 13  Lot                      5530 non-null   object\n",
+      " 14  Total Pay                5530 non-null   int64 \n",
+      " 15  Allowed duration         5530 non-null   int64 \n",
+      " 16  Exceeded duration        5530 non-null   int64 \n",
+      " 17  License plate city code  5529 non-null   object\n",
+      "dtypes: int64(8), object(10)\n",
+      "memory usage: 777.8+ KB\n"
      ]
     }
    ],
@@ -71,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +307,7 @@
        "4             21 days                       11 days  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +353,7 @@
        "       'on_hold', 'waiting_for_owner_data'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +377,7 @@
        "       'checked_by_tech'], dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +407,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -441,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +490,7 @@
        "Text(0, 0.5, 'Frequency')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -525,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +541,7 @@
        "Text(0, 0.5, 'Number of days of receiving the first notice')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -577,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +626,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -660,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +677,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -713,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +729,7 @@
        "Text(0.5, 1.0, 'Dataset2')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -762,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +834,7 @@
        "Parking duration              0.03009      -0.024015 -0.037258     -0.245149  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +913,7 @@
        "Parking duration     -0.115584  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +933,7 @@
        "Text(0, 0.5, 'Parking duration')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -967,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
