--- a/challenge_1.ipynb
+++ b/challenge_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -111,8 +111,6 @@
        "      <th>Allowed duration</th>\n",
        "      <th>Exceeded duration</th>\n",
        "      <th>License plate city code</th>\n",
-       "      <th>first_ticket_period</th>\n",
-       "      <th>pay_after_first_ticket_period</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -123,21 +121,19 @@
        "      <td>30</td>\n",
        "      <td>30</td>\n",
        "      <td>10</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2015-11-24</td>\n",
        "      <td>158</td>\n",
        "      <td>2015-11-10</td>\n",
        "      <td>2015-11-12</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>A026</td>\n",
        "      <td>40</td>\n",
        "      <td>120</td>\n",
        "      <td>38</td>\n",
        "      <td>M</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -146,9 +142,9 @@
        "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td>15</td>\n",
-       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1038</td>\n",
        "      <td>2015-11-20</td>\n",
        "      <td>2016-01-12</td>\n",
@@ -159,8 +155,6 @@
        "      <td>120</td>\n",
        "      <td>918</td>\n",
        "      <td>MZ</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -169,21 +163,19 @@
        "      <td>40</td>\n",
        "      <td>40</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2015-11-20</td>\n",
        "      <td>666</td>\n",
        "      <td>2015-11-06</td>\n",
        "      <td>2015-11-09</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>A109</td>\n",
        "      <td>40</td>\n",
        "      <td>150</td>\n",
        "      <td>516</td>\n",
        "      <td>MTK</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -192,21 +184,19 @@
        "      <td>20</td>\n",
        "      <td>20</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2015-11-19</td>\n",
        "      <td>74</td>\n",
        "      <td>2015-11-10</td>\n",
        "      <td>2015-11-12</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>A129</td>\n",
        "      <td>20</td>\n",
        "      <td>80</td>\n",
        "      <td>-6</td>\n",
        "      <td>FR</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -215,21 +205,19 @@
        "      <td>30</td>\n",
        "      <td>40</td>\n",
        "      <td>10</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2015-12-08</td>\n",
        "      <td>225</td>\n",
        "      <td>2015-11-06</td>\n",
        "      <td>2015-11-27</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>A009</td>\n",
        "      <td>40</td>\n",
        "      <td>185</td>\n",
        "      <td>40</td>\n",
        "      <td>M</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>11.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -244,35 +232,28 @@
        "4   5                paid           30            40             10   \n",
        "\n",
        "  Cancellation Date Cancellation Reason Payment Date  Parking duration  \\\n",
-       "0               NaT                 NaN   2015-11-24               158   \n",
-       "1               NaT                 NaN          NaT              1038   \n",
-       "2               NaT                 NaN   2015-11-20               666   \n",
-       "3               NaT                 NaN   2015-11-19                74   \n",
-       "4               NaT                 NaN   2015-12-08               225   \n",
+       "0               NaN                 NaN   2015-11-24               158   \n",
+       "1               NaN                 NaN          NaN              1038   \n",
+       "2               NaN                 NaN   2015-11-20               666   \n",
+       "3               NaN                 NaN   2015-11-19                74   \n",
+       "4               NaN                 NaN   2015-12-08               225   \n",
        "\n",
        "  Day of Violation First Letter Reminder Sent First Warning   Lot  Total Pay  \\\n",
-       "0       2015-11-10   2015-11-12           NaT           NaT  A026         40   \n",
+       "0       2015-11-10   2015-11-12           NaN           NaN  A026         40   \n",
        "1       2015-11-20   2016-01-12    2016-01-29    2016-02-16  A036         45   \n",
-       "2       2015-11-06   2015-11-09           NaT           NaT  A109         40   \n",
-       "3       2015-11-10   2015-11-12           NaT           NaT  A129         20   \n",
-       "4       2015-11-06   2015-11-27           NaT           NaT  A009         40   \n",
+       "2       2015-11-06   2015-11-09           NaN           NaN  A109         40   \n",
+       "3       2015-11-10   2015-11-12           NaN           NaN  A129         20   \n",
+       "4       2015-11-06   2015-11-27           NaN           NaN  A009         40   \n",
        "\n",
-       "   Allowed duration  Exceeded duration License plate city code  \\\n",
-       "0               120                 38                       M   \n",
-       "1               120                918                      MZ   \n",
-       "2               150                516                     MTK   \n",
-       "3                80                 -6                      FR   \n",
-       "4               185                 40                       M   \n",
-       "\n",
-       "   first_ticket_period  pay_after_first_ticket_period  \n",
-       "0                  2.0                           12.0  \n",
-       "1                 53.0                            NaN  \n",
-       "2                  3.0                           11.0  \n",
-       "3                  2.0                            7.0  \n",
-       "4                 21.0                           11.0  "
+       "   Allowed duration  Exceeded duration License plate city code  \n",
+       "0               120                 38                       M  \n",
+       "1               120                918                      MZ  \n",
+       "2               150                516                     MTK  \n",
+       "3                80                 -6                      FR  \n",
+       "4               185                 40                       M  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +512,7 @@
        "5              4 days                       58 days  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +558,7 @@
        "       'on_hold', 'waiting_for_owner_data'], dtype=object)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +582,7 @@
        "       'checked_by_tech'], dtype=object)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +612,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -663,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +695,7 @@
        "Text(0, 0.5, 'Frequency')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -747,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +746,7 @@
        "Text(0, 0.5, 'Number of days of receiving the first notice')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -799,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +831,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -882,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +882,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -935,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +934,7 @@
        "Text(0.5, 1.0, 'Dataset2')"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -984,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1039,7 @@
        "Parking duration             0.033549       -0.02369 -0.034918     -0.245781  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1118,7 @@
        "Parking duration     -0.118868  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1138,7 @@
        "Text(0, 0.5, 'Exceeded duration')"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1189,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
